--- a/project/at_start_f437/applications/lvgl_demo/mdk_v5/objects/lvgl_ebike.build_log.htm
+++ b/project/at_start_f437/applications/lvgl_demo/mdk_v5/objects/lvgl_ebike.build_log.htm
@@ -17,7 +17,7 @@ Library Manager: ArmAr.exe V6.16
 Hex Converter:   FromElf.exe V6.16
 CPU DLL:         SARMCM3.DLL V5.36.0.0
 Dialog DLL:      DCM.DLL V1.17.3.0
-Target DLL:      UL2CM3.DLL V1.164.0.0
+Target DLL:      CMSIS_AGDI.dll V1.33.0.0
 Dialog DLL:      TCM.DLL V1.53.0.0
  
 <h2>Project:</h2>
@@ -27,196 +27,196 @@ Project File Date:  02/26/2024
 <h2>Output:</h2>
 *** Using Compiler 'V6.16', folder: 'D:\Keil_v5\ARM\ARMCLANG\Bin'
 Rebuild target 'at32f437_lvgl_demo'
-compiling at32_video_ev_spi.c...
+compiling at32f435_437_clock.c...
 compiling at32_video_ev_font.c...
+compiling at32f435_437_board.c...
+compiling at32_video_ev_spi.c...
+compiling at32f435_437_gpio.c...
+compiling main.c...
+compiling at32f435_437_int.c...
 compiling at32f435_437_misc.c...
 compiling at32f435_437_dma.c...
-compiling at32f435_437_int.c...
-compiling at32f435_437_flash.c...
-compiling at32f435_437_crm.c...
-compiling at32f435_437_clock.c...
-compiling at32f435_437_gpio.c...
-compiling at32_video_ev_touch.c...
-compiling at32_video_ev_lcd.c...
-compiling main.c...
-compiling at32f435_437_board.c...
+compiling lv_tick_custom.c...
 compiling at32f435_437_i2c.c...
+compiling at32_video_ev_touch.c...
 compiling at32f435_437_spi.c...
 assembling startup_at32f435_437.s...
-compiling lv_tick_custom.c...
-compiling at32f435_437_tmr.c...
-compiling lv_group.c...
+compiling at32_video_ev_lcd.c...
+compiling at32f435_437_crm.c...
+compiling at32f435_437_flash.c...
 compiling at32f435_437_usart.c...
-compiling lv_disp.c...
-compiling lv_obj_class.c...
-compiling lv_event.c...
+compiling at32f435_437_tmr.c...
 compiling system_at32f435_437.c...
-compiling lv_indev.c...
+compiling lv_disp.c...
+compiling lv_event.c...
+compiling lv_obj_class.c...
+compiling lv_group.c...
 compiling lv_indev_scroll.c...
-compiling lv_obj_style_gen.c...
+compiling lv_indev.c...
 compiling lv_obj_draw.c...
+compiling lv_obj.c...
 compiling lv_draw.c...
 compiling lv_obj_tree.c...
-compiling lv_obj_scroll.c...
-compiling lv_obj_style.c...
-compiling lv_obj.c...
-compiling lv_obj_pos.c...
 compiling lv_draw_arc.c...
-compiling lv_draw_img.c...
+compiling lv_obj_style_gen.c...
 compiling lv_theme.c...
+compiling lv_obj_scroll.c...
+compiling lv_draw_img.c...
+compiling lv_obj_pos.c...
 compiling lv_draw_line.c...
+compiling lv_obj_style.c...
 compiling lv_draw_label.c...
-compiling lv_draw_triangle.c...
 compiling lv_draw_rect.c...
-compiling lv_img_cache.c...
+compiling lv_draw_triangle.c...
 compiling lv_refr.c...
-compiling lv_extra.c...
+compiling lv_img_cache.c...
 compiling lv_img_buf.c...
-compiling lv_animimg.c...
-compiling lv_calendar_header_dropdown.c...
+compiling lv_extra.c...
 compiling lv_img_decoder.c...
 compiling lv_calendar_header_arrow.c...
-compiling lv_keyboard.c...
+compiling lv_animimg.c...
+compiling lv_calendar_header_dropdown.c...
+compiling lv_draw_mask.c...
 compiling lv_calendar.c...
 compiling lv_list.c...
+compiling lv_keyboard.c...
 compiling lv_imgbtn.c...
 compiling lv_led.c...
-compiling lv_draw_mask.c...
-compiling lv_menu.c...
 compiling lv_colorwheel.c...
+compiling lv_menu.c...
 compiling lv_msgbox.c...
 compiling lv_meter.c...
-compiling lv_spinner.c...
-compiling lv_tileview.c...
 compiling lv_spinbox.c...
-compiling lv_win.c...
-compiling lv_chart.c...
+compiling lv_spinner.c...
 compiling lv_tabview.c...
-compiling lv_bmp.c...
+compiling lv_chart.c...
+compiling lv_tileview.c...
+compiling lv_win.c...
 compiling lv_span.c...
-compiling lv_fs_posix.c...
-compiling lv_freetype.c...
+compiling lv_bmp.c...
 compiling lv_ffmpeg.c...
+compiling lv_freetype.c...
 compiling lv_fs_fatfs.c...
+compiling lv_fs_posix.c...
 compiling lv_flex.c...
-compiling gifdec.c...
 compiling lv_fs_stdio.c...
 compiling lv_grid.c...
+compiling gifdec.c...
 compiling lv_fs_win32.c...
-compiling lodepng.c...
 compiling lv_gif.c...
+compiling lodepng.c...
+compiling lv_png.c...
 compiling lv_qrcode.c...
 compiling tjpgd.c...
 compiling lv_rlottie.c...
-compiling lv_gridnav.c...
-compiling lv_png.c...
-compiling lv_monkey.c...
-compiling lv_snapshot.c...
 compiling lv_sjpg.c...
-compiling lv_font.c...
+compiling lv_gridnav.c...
+compiling lv_snapshot.c...
+compiling lv_monkey.c...
 compiling lv_theme_basic.c...
-compiling lv_theme_mono.c...
+compiling qrcodegen.c...
+compiling lv_font.c...
 compiling lv_theme_default.c...
+compiling lv_theme_mono.c...
 compiling lv_font_dejavu_16_persian_hebrew.c...
 compiling lv_font_fmt_txt.c...
 compiling lv_font_montserrat_8.c...
-compiling qrcodegen.c...
 compiling lv_font_montserrat_10.c...
-compiling lv_font_montserrat_12.c...
-compiling lv_font_montserrat_18.c...
 compiling lv_font_montserrat_12_subpx.c...
-compiling lv_font_montserrat_20.c...
+compiling lv_font_montserrat_12.c...
 compiling lv_font_loader.c...
 compiling lv_font_montserrat_14.c...
+compiling lv_font_montserrat_18.c...
 compiling lv_font_montserrat_16.c...
-compiling lv_font_montserrat_26.c...
-compiling lv_font_montserrat_22.c...
-compiling lv_font_montserrat_30.c...
+compiling lv_font_montserrat_20.c...
 compiling lv_font_montserrat_24.c...
-compiling lv_font_montserrat_28_compressed.c...
-compiling lv_font_montserrat_34.c...
+compiling lv_font_montserrat_22.c...
+compiling lv_font_montserrat_26.c...
 compiling lv_font_montserrat_28.c...
+compiling lv_font_montserrat_28_compressed.c...
+compiling lv_font_montserrat_30.c...
+compiling lv_font_montserrat_34.c...
 compiling lv_font_montserrat_36.c...
-compiling lv_font_montserrat_40.c...
 compiling lv_font_montserrat_38.c...
 compiling lv_font_montserrat_32.c...
+compiling lv_font_montserrat_40.c...
 compiling lv_font_montserrat_42.c...
-compiling lv_font_montserrat_46.c...
 compiling lv_font_montserrat_44.c...
-compiling lv_font_simsun_16_cjk.c...
+compiling lv_font_montserrat_46.c...
 compiling lv_font_montserrat_48.c...
-compiling lv_font_unscii_16.c...
+compiling lv_font_simsun_16_cjk.c...
 compiling lv_font_unscii_8.c...
-compiling lv_anim_timeline.c...
+compiling lv_font_unscii_16.c...
 compiling lv_hal_indev.c...
-compiling lv_async.c...
-compiling lv_area.c...
+compiling lv_anim_timeline.c...
 compiling lv_anim.c...
 compiling lv_hal_disp.c...
-compiling lv_bidi.c...
 compiling lv_hal_tick.c...
-compiling lv_gc.c...
+compiling lv_async.c...
+compiling lv_bidi.c...
+compiling lv_area.c...
 compiling lv_color.c...
+compiling lv_gc.c...
 compiling lv_log.c...
 compiling lv_fs.c...
 compiling lv_ll.c...
+compiling lv_lru.c...
 compiling lv_math.c...
 compiling lv_templ.c...
-compiling lv_lru.c...
-compiling lv_mem.c...
 compiling lv_printf.c...
-compiling lv_timer.c...
-compiling lv_utils.c...
-compiling lv_txt_ap.c...
-compiling lv_style_gen.c...
+compiling lv_mem.c...
 compiling lv_style.c...
+compiling lv_timer.c...
+compiling lv_style_gen.c...
+compiling lv_txt_ap.c...
+compiling lv_utils.c...
 compiling lv_tlsf.c...
-compiling lv_btn.c...
 compiling lv_txt.c...
+compiling lv_btn.c...
 compiling lv_bar.c...
 compiling lv_arc.c...
-compiling lv_objx_templ.c...
 compiling lv_checkbox.c...
-compiling lv_canvas.c...
-compiling lv_dropdown.c...
-compiling lv_btnmatrix.c...
-compiling lv_switch.c...
+compiling lv_objx_templ.c...
 compiling lv_line.c...
+compiling lv_canvas.c...
+compiling lv_btnmatrix.c...
 compiling lv_img.c...
-compiling lv_slider.c...
-compiling lv_roller.c...
+compiling lv_dropdown.c...
+compiling lv_switch.c...
 compiling lv_draw_sw.c...
-compiling lv_draw_sw_dither.c...
+compiling lv_slider.c...
 compiling lv_label.c...
+compiling lv_roller.c...
+compiling lv_draw_sw_dither.c...
 compiling lv_draw_sw_arc.c...
-compiling lv_textarea.c...
 compiling lv_draw_sw_gradient.c...
+compiling lv_table.c...
 compiling lv_draw_sw_img.c...
+compiling lv_textarea.c...
+compiling lv_draw_sw_letter.c...
+compiling lv_draw_transform.c...
 compiling lv_draw_sw_polygon.c...
 compiling lv_draw_sw_line.c...
-compiling lv_draw_transform.c...
-compiling lv_table.c...
 compiling lv_draw_sw_blend.c...
-compiling lv_draw_sw_letter.c...
 compiling lv_draw_layer.c...
 compiling lv_draw_sw_layer.c...
 compiling lv_draw_sw_transform.c...
 compiling img_benchmark_cogwheel_alpha16.c...
-compiling img_benchmark_cogwheel_chroma_keyed.c...
-compiling img_benchmark_cogwheel_indexed16.c...
-compiling lv_port_indev_template.c...
-compiling lv_port_disp_template.c...
-compiling img_benchmark_cogwheel_argb.c...
-compiling lv_font_bechmark_montserrat_12_compr_az.c.c...
 compiling lv_draw_sw_rect.c...
-compiling img_benchmark_cogwheel_rgb565a8.c...
-compiling lv_font_bechmark_montserrat_16_compr_az.c.c...
-compiling lv_font_bechmark_montserrat_28_compr_az.c.c...
+compiling lv_port_disp_template.c...
+compiling lv_port_indev_template.c...
+compiling img_benchmark_cogwheel_argb.c...
+compiling img_benchmark_cogwheel_indexed16.c...
+compiling img_benchmark_cogwheel_chroma_keyed.c...
 compiling img_benchmark_cogwheel_rgb.c...
+compiling lv_font_bechmark_montserrat_12_compr_az.c.c...
 compiling lv_demo_benchmark.c...
+compiling lv_font_bechmark_montserrat_16_compr_az.c.c...
+compiling img_benchmark_cogwheel_rgb565a8.c...
+compiling lv_font_bechmark_montserrat_28_compr_az.c.c...
 compiling lv_example_style_10.c...
 linking...
-Program Size: Code=114522 RO-data=101446 RW-data=1972 ZI-data=34884  
+Program Size: Code=114694 RO-data=101446 RW-data=1972 ZI-data=42564  
 FromELF: creating hex file...
 ".\objects\lvgl_ebike.axf" - 0 Error(s), 0 Warning(s).
 
@@ -231,7 +231,7 @@ Package Vendor: ArteryTek
   C:\Users\yinsua\AppData\Local\Arm\Packs\ArteryTek\AT32F435_437_DFP\2.0.9\Device\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:12
+Build Time Elapsed:  00:00:11
 </pre>
 </body>
 </html>
